kome/modules/base/manifests/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.kome.mrobert.fr
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  name: http
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - keycloak.kome.mrobert.fr
      secretName: keycloak.kome.mrobert.fr-tls
